--- a/templates/admin/baseAdmin.html.twig
+++ b/templates/admin/baseAdmin.html.twig
@@ -12,13 +12,16 @@
 			{% endblock %}
 		</title>
 		{# Run `composer require symfony/webpack-encore-bundle`
-																																																																								           and uncomment the following Encore helpers to start using Symfony UX #}
+																																																																														           and uncomment the following Encore helpers to start using Symfony UX #}
 		{% block stylesheets %}
 			<link rel="stylesheet" href="{{asset('admin/assets/css/bootstrap.min.css')}}"/>
 			<link rel="stylesheet" href="{{asset('admin/assets/css/font-awesome.min.css')}}"/>
 			<link rel="stylesheet" href="{{asset('admin/assets/css/themify-icons.css')}}"/>
 			<link rel="stylesheet" href="{{asset('admin/assets/css/metisMenu.css')}}"/>
 			<link rel="stylesheet" href="{{asset('admin/assets/css/owl.carousel.min.css')}}"/>
+			<link rel="stylesheet" href="{{asset('admin/assets/css/bootstrap.css')}}"/>
+			<link rel="stylesheet" href="{{asset('admin/assets/css/fonts.css')}}">
+
 			<link
 			rel="stylesheet" href="{{asset('admin/assets/css/slicknav.min.css')}}"/>
 
@@ -385,7 +388,7 @@
 							</div>
 							<p>
 								Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
-																																																																																																																																																																																																              distinctio itaque at.
+																																																																																																																																																																																																																								              distinctio itaque at.
 							</p>
 						</div>
 						<div class="timeline-task">
@@ -420,7 +423,7 @@
 							</div>
 							<p>
 								Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
-																																																																																																																																																																																																              distinctio itaque at.
+																																																																																																																																																																																																																								              distinctio itaque at.
 							</p>
 						</div>
 						<div class="timeline-task">
@@ -434,7 +437,7 @@
 							</div>
 							<p>
 								Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
-																																																																																																																																																																																																              distinctio itaque at.
+																																																																																																																																																																																																																								              distinctio itaque at.
 							</p>
 						</div>
 						<div class="timeline-task">
@@ -459,7 +462,7 @@
 							</div>
 							<p>
 								Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
-																																																																																																																																																																																																              distinctio itaque at.
+																																																																																																																																																																																																																								              distinctio itaque at.
 							</p>
 						</div>
 						<div class="timeline-task">
@@ -483,7 +486,7 @@
 							</div>
 							<p>
 								Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
-																																																																																																																																																																																																              distinctio itaque at.
+																																																																																																																																																																																																																								              distinctio itaque at.
 							</p>
 						</div>
 						<div class="timeline-task">
@@ -497,7 +500,7 @@
 							</div>
 							<p>
 								Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
-																																																																																																																																																																																																              distinctio itaque at.
+																																																																																																																																																																																																																								              distinctio itaque at.
 							</p>
 						</div>
 					</div>
@@ -526,7 +529,7 @@
 								</div>
 								<p>
 									The for attribute is necessary to bind our custom checkbox
-																																																																																																																																																																																																																								                with the input.
+																																																																																																																																																																																																																																																			                with the input.
 								</p>
 							</div>
 							<div class="s-settings">
@@ -549,7 +552,7 @@
 								</div>
 								<p>
 									The for attribute is necessary to bind our custom checkbox
-																																																																																																																																																																																																																								                with the input.
+																																																																																																																																																																																																																																																			                with the input.
 								</p>
 							</div>
 							<div class="s-settings">
@@ -577,6 +580,9 @@
 		<script src="{{asset('admin/assets/js/metisMenu.min.js')}}"></script>
 		<script src="{{asset('admin/assets/js/jquery.slimscroll.min.js')}}"></script>
 		<script src="{{asset('admin/assets/js/jquery.slicknav.min.js')}}"></script>
+		<!--jquery -->
+		<script src="{{asset('admin/assets/js/jquery.js')}}"></script>
+		<script src="{{asset('admin/assets/js/bootstrap.js')}}"></script>
 
 
 		<!-- start chart js -->
