--- a/templates/admin/baseAdmin.html.twig
+++ b/templates/admin/baseAdmin.html.twig
@@ -12,7 +12,7 @@
 			{% endblock %}
 		</title>
 		{# Run `composer require symfony/webpack-encore-bundle`
-																																																																														           and uncomment the following Encore helpers to start using Symfony UX #}
+																																																																																						           and uncomment the following Encore helpers to start using Symfony UX #}
 		{% block stylesheets %}
 			<link rel="stylesheet" href="{{asset('admin/assets/css/bootstrap.min.css')}}"/>
 			<link rel="stylesheet" href="{{asset('admin/assets/css/font-awesome.min.css')}}"/>
@@ -348,7 +348,7 @@
 								<div class="dropdown-menu">
 									<a class="dropdown-item" href="#">Message</a>
 									<a class="dropdown-item" href="#">Settings</a>
-									<a class="dropdown-item" href="#">Log Out</a>
+									<a class="dropdown-item" href="{{ path('logoutroute')}}">Log Out</a>
 								</div>
 							</div>
 						</div>
@@ -396,7 +396,7 @@
 							</div>
 							<p>
 								Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
-																																																																																																																																																																																																																								              distinctio itaque at.
+																																																																																																																																																																																																																																																								              distinctio itaque at.
 							</p>
 						</div>
 						<div class="timeline-task">
@@ -431,7 +431,7 @@
 							</div>
 							<p>
 								Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
-																																																																																																																																																																																																																								              distinctio itaque at.
+																																																																																																																																																																																																																																																								              distinctio itaque at.
 							</p>
 						</div>
 						<div class="timeline-task">
@@ -445,7 +445,7 @@
 							</div>
 							<p>
 								Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
-																																																																																																																																																																																																																								              distinctio itaque at.
+																																																																																																																																																																																																																																																								              distinctio itaque at.
 							</p>
 						</div>
 						<div class="timeline-task">
@@ -470,7 +470,7 @@
 							</div>
 							<p>
 								Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
-																																																																																																																																																																																																																								              distinctio itaque at.
+																																																																																																																																																																																																																																																								              distinctio itaque at.
 							</p>
 						</div>
 						<div class="timeline-task">
@@ -494,7 +494,7 @@
 							</div>
 							<p>
 								Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
-																																																																																																																																																																																																																								              distinctio itaque at.
+																																																																																																																																																																																																																																																								              distinctio itaque at.
 							</p>
 						</div>
 						<div class="timeline-task">
@@ -508,7 +508,7 @@
 							</div>
 							<p>
 								Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
-																																																																																																																																																																																																																								              distinctio itaque at.
+																																																																																																																																																																																																																																																								              distinctio itaque at.
 							</p>
 						</div>
 					</div>
@@ -537,7 +537,7 @@
 								</div>
 								<p>
 									The for attribute is necessary to bind our custom checkbox
-																																																																																																																																																																																																																																																			                with the input.
+																																																																																																																																																																																																																																																																																							                with the input.
 								</p>
 							</div>
 							<div class="s-settings">
@@ -560,7 +560,7 @@
 								</div>
 								<p>
 									The for attribute is necessary to bind our custom checkbox
-																																																																																																																																																																																																																																																			                with the input.
+																																																																																																																																																																																																																																																																																							                with the input.
 								</p>
 							</div>
 							<div class="s-settings">
@@ -582,40 +582,20 @@
 
 		<!-- bootstrap 4 js -->
 		<script src="{{asset('admin/assets/js/popper.min.js')}}"></script>
-
-		<script src="{{asset('admin/assets/js/bootstrap.min.js')}}"></script>
-		<script src="{{asset('admin/assets/js/owl.carousel.min.js')}}"></script>
-		<script src="{{asset('admin/assets/js/metisMenu.min.js')}}"></script>
-		<script src="{{asset('admin/assets/js/jquery.slimscroll.min.js')}}"></script>
-		<script src="{{asset('admin/assets/js/jquery.slicknav.min.js')}}"></script>
 		<!--jquery -->
 		<script src="{{asset('admin/assets/js/jquery.js')}}"></script>
 		<script src="{{asset('admin/assets/js/bootstrap.js')}}"></script>
 
-
-	
 		<!-- start zingchart js -->
 		<script src="https://cdn.zingchart.com/zingchart.min.js"></script>
 		<script>
 			zingchart.MODULESDIR = "https://cdn.zingchart.com/modules/";
 ZC.LICENSE = ["569d52cefae586f634c54f86dc99e6a9", "ee6b7db5b51705a13dc2339db3edaf6d",];
 		</script>
-	
-	
-		<!-- others plugins -->
-
-
-		<!-- jquery latest version -->
-		<script src="{{asset('admin/assets/js/vendor/jquery-2.2.4.min.js')}}"></script>
-
-
-		
 
 		<!-- offset area end -->
-		<!-- jquery latest version -->
-		<script src="{{asset('admin/assets/js/vendor/jquery-2.2.4.min.js')}}"></script>
 		<!-- bootstrap 4 js -->
-		<script src="{{asset('admin/assets/js/popper.min.js')}}"></script>
+
 		<script src="{{asset('admin/assets/js/bootstrap.min.js')}}"></script>
 		<script src="{{asset('admin/assets/js/owl.carousel.min.js')}}"></script>
 		<script src="{{asset('admin/assets/js/metisMenu.min.js')}}"></script>
@@ -630,32 +610,32 @@ ZC.LICENSE = ["569d52cefae586f634c54f86dc99e6a9", "ee6b7db5b51705a13dc2339db3eda
 		<!-- others plugins -->
 		<script src="{{asset('admin/assets/js/plugins.js')}}"></script>
 		<script src="{{asset('admin/assets/js/scripts.js')}}"></script>
-<!-- start chart js -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
-    <!-- start highcharts js -->
-   <!-- start highcharts js -->
+		<!-- start chart js -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+		<!-- start highcharts js -->
+		<!-- start highcharts js -->
 		<script src="https://code.highcharts.com/highcharts.js"></script>
-    <script src="https://code.highcharts.com/modules/exporting.js"></script>
-    <script src="https://code.highcharts.com/modules/export-data.js"></script>
-    <!-- start amcharts -->
-    <script src="https://www.amcharts.com/lib/3/amcharts.js"></script>
-    <script src="https://www.amcharts.com/lib/3/ammap.js"></script>
-    <script src="https://www.amcharts.com/lib/3/maps/js/worldLow.js"></script>
-    <script src="https://www.amcharts.com/lib/3/serial.js"></script>
-    <script src="https://www.amcharts.com/lib/3/plugins/export/export.min.js"></script>
-    <script src="https://www.amcharts.com/lib/3/themes/light.js"></script>
+		<script src="https://code.highcharts.com/modules/exporting.js"></script>
+		<script src="https://code.highcharts.com/modules/export-data.js"></script>
+		<!-- start amcharts -->
+		<script src="https://www.amcharts.com/lib/3/amcharts.js"></script>
+		<script src="https://www.amcharts.com/lib/3/ammap.js"></script>
+		<script src="https://www.amcharts.com/lib/3/maps/js/worldLow.js"></script>
+		<script src="https://www.amcharts.com/lib/3/serial.js"></script>
+		<script src="https://www.amcharts.com/lib/3/plugins/export/export.min.js"></script>
+		<script src="https://www.amcharts.com/lib/3/themes/light.js"></script>
 		<!-- all line chart activation -->
-<script src="https://www.amcharts.com/lib/3/amcharts.js"></script>
-<script src="https://www.amcharts.com/lib/3/pie.js"></script>
-<script src="https://www.amcharts.com/lib/3/serial.js"></script>
-<script src="https://www.amcharts.com/lib/3/themes/light.js"></script>
+		<script src="https://www.amcharts.com/lib/3/amcharts.js"></script>
+		<script src="https://www.amcharts.com/lib/3/pie.js"></script>
+		<script src="https://www.amcharts.com/lib/3/serial.js"></script>
+		<script src="https://www.amcharts.com/lib/3/themes/light.js"></script>
 		<script src="{{asset('admin/assets/js/line-chart.js')}}"></script>
 		<!-- all pie chart -->
 
 		<script src="{{asset('admin/assets/js/pie-chart.js')}}"></script>
 		<script src="{{asset('admin/assets/js/bar-chart.js')}}"></script>
-			<!-- start chart js -->
+		<!-- start chart js -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
-		
+
 	</body>
 </html>
