--- a/templates/produit2/show.html.twig
+++ b/templates/produit2/show.html.twig
@@ -2,7 +2,7 @@
 {% block title %}Store{% endblock %}
 
 {% block body %}
-    <h1 co>Produit</h1>
+    <h1>Produit</h1>
 
     <table class="table" bgcolor="#a9a9a9">
         <tbody  bgcolor="#a9a9a9">
