--- a/templates/admin/store.html.twig
+++ b/templates/admin/store.html.twig
@@ -5,12 +5,19 @@
 	<!-- page title area end -->
 	<div class="main-content-inner">
 		<a class="btn btn-dark" href="{{ path('/produit2/stat') }}"> Go TO STATS </a>
+		<a class="btn btn-dark" href="{{ path('app_commande_index') }}"> Order list </a>
+		<a class="btn btn-dark" href="{{ path('app_produit2_new') }}">  Create new </a>
+		<a class="btn btn-dark" href="{{  path('app_category_p_new')}}">  Category </a>
+
+
+
 		<div class="row" style="margin-top: 30px;">
 			<div class="col-11">
 				<a href="{{ path('app_produit2_new') }}" class="btn btn-success btn-xs pull-right" data-toggle="modal" data-target="#AddModal">Add new product</a>
 			</div>
 		</div>
 		<div>
+
 			<form role="search" id="nav-search-form" method="post" action="{{ path('/produit/tri') }}">
 				<div class="btn-toolbar" role="toolbar" aria-label="Programmatic control">
 					<div class="btn-group btn-group-sm" aria-label="Set Select2 option">
@@ -28,26 +35,24 @@
 			{% for produit2 in produit2s %}
 				<div class="col-lg-4 col-md-6 mt-5">
 					<div class="card card-bordered">
-									<img src="{{ vich_uploader_asset(produit2, 'imageFile')|imagine_filter('thumb')   }}" alt="card-image-top" style="width: auto; height:auto ">
+									<img src="{{ vich_uploader_asset(produit2, 'imageFile') }}" alt="card-image-top">
 									<div class="card-body">
 										<h5>{{ produit2.nom }} </h5>
 											<h3>{{ produit2.prix }} dt</h3>
 										<p class="card-text">{{ produit2.description }}.</p>
 										<a href="{{ path('app_produit2_edit', {'idp2': produit2.idp2}) }}"class="btn btn-outline-warning btn-xs">edit</a>
 										<a href="" class="btn btn-outline-danger btn-xs" data-toggle="modal" data-target="#deleteModal" >Delete</a>
-
-
-										<a href="{{ path('cart_add', {'idp2': produit2.idp2}) }}" class="btn btn-success float-right">
-											<i class="fas fa-shopping-cart mr-1"></i>
-											Card
-										</a>
 									</div>
 								</div>
 
 
 					</div>
 				{% endfor %}
+			<div  class="navigation" style="font-size: large" >
+				{{ knp_pagination_render(produit2s) }}
 			</div>
+
+		</div>
 
 			<!---modaaaaaaaaaaaaaaaaaaaaaaaalll deleetteee -->
 		{% for produit2 in produit2s %}
@@ -198,4 +203,10 @@
 			</div>
 		</div>
 	</div>
+	<style>
+		body {
+			background-color: #0d0d0d;
+			justify-content: center;
+		}
+	</style>
 {% endblock %}
