--- a/templates/category_p/edit.html.twig
+++ b/templates/category_p/edit.html.twig
@@ -2,7 +2,7 @@
 {% block title %}Edit Category{% endblock %}
 
 {% block body %}
-    <h1>Edit Category</h1>
+    <h1 style="color: azure">Edit Category</h1>
 
     {{ include('category_p/_form.html.twig', {'button_label': 'Update'}) }}
 
