--- a/templates/category_p/new.html.twig
+++ b/templates/category_p/new.html.twig
@@ -3,7 +3,7 @@
 {% block title %}New Category{% endblock %}
 
 {% block body %}
-    <h1>Create new Category</h1>
+    <h1 style="color: azure">Create new Category</h1>
 
     {{ include('category_p/_form.html.twig') }}
 
