--- a/templates/category_p/show.html.twig
+++ b/templates/category_p/show.html.twig
@@ -2,9 +2,9 @@
 {% block title %}CategoryP{% endblock %}
 
 {% block body %}
-    <h1>Categories</h1>
+    <h1 style="color: azure">Categories</h1>
 
-    <table class="table">
+    <table class="table" style="color: azure">
         <tbody>
             <tr>
                 <th>Id</th>
