--- a/templates/produit2/new.html.twig
+++ b/templates/produit2/new.html.twig
@@ -2,9 +2,9 @@
 {% block title %}New Produit{% endblock %}
 
 {% block body %}
-    <h1>Create new </h1>
+    <h1 style="color: azure">Create new</h1>
 
     {{ include('produit2/_form.html.twig') }}
 
-    <a href="{{ path('app_produit2_index') }}">back to list</a>
+    <a style="color: transparent" href="{{ path('app_produit2_index') }}">back to list</a>
 {% endblock %}
